--- a/lesson-1/Vagrantfile
+++ b/lesson-1/Vagrantfile
@@ -1,36 +1,4 @@
-# -*- mode: ruby -*-
-# vim: set ft=ruby :
-
-MACHINES = {
-  :otuslinux => {
-        :box_name => "sergeyvicgor/centos-8-kernel-5",
-        :ip_addr => '192.168.11.101',
-        :box_version => "1.0"
-  },
-}
-
 Vagrant.configure("2") do |config|
-
-  MACHINES.each do |boxname, boxconfig|
-
-      config.vm.define boxname do |box|
-
-          box.vm.box = boxconfig[:box_name]
-          box.vm.box_version = boxconfig[:box_version]
-          box.vm.host_name = boxname.to_s
-
-          #box.vm.network "forwarded_port", guest: 3260, host: 3260+offset
-
-          box.vm.network "private_network", ip: boxconfig[:ip_addr]
-
-          box.vm.provider :virtualbox do |vb|
-            vb.customize ["modifyvm", :id, "--memory", "1024"]
-          end
-
-          box.vm.provision :shell do |s|
-             s.inline = 'mkdir -p ~root/.ssh; cp ~vagrant/.ssh/auth* ~root/.ssh'
-          end
-
-      end
-  end
+  config.vm.box = "sergeyvicgor/centos8-kernel5"
+  config.vm.box_version = "1.0"
 end
